fixx bugs error deprecated locale language